force-app/main/default/objects/Case/fields/Change_Category__c.field-meta.xml
<CustomField>
    <fullName>Change_Category__c</fullName>
    <description>Used for top-level routing; based on associated record type</description>
    <inlineHelpText>Used for top-level routing; based on associated record type</inlineHelpText>
    <label>Change Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>