force-app/main/default/objects/Case/fields/Change_Request__c.field-meta.xml
<CustomField>
    <fullName>Change_Request__c</fullName>
    <label>Change Request</label>
    <type>Url</type>
</CustomField>