force-app/main/default/objects/Case/fields/TT_Feature__c.field-meta.xml
<CustomField>
    <fullName>TT_Feature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the feature if the case resulted in the creation or update of a feature</description>
    <inlineHelpText>Link to the feature if the case resulted in the creation or update of a feature</inlineHelpText>
    <label>TT Feature</label>
    <referenceTo>TT_Feature__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>