force-app/main/default/objects/Case/fields/TT_Initiative__c.field-meta.xml
<CustomField>
    <fullName>TT_Initiative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to initiative if case resulted in creation of and update of an initiative</description>
    <inlineHelpText>Link to initiative if case resulted in creation of and update of an initiative</inlineHelpText>
    <label>TT Initiative</label>
    <referenceTo>TT_Initiative__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>