force-app/main/default/objects/Case/fields/TT_Story__c.field-meta.xml
<CustomField>
    <fullName>TT_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the story  if the case resulted in the creation or update of a story</description>
    <inlineHelpText>Link to the story  if the case resulted in the creation or update of a story</inlineHelpText>
    <label>TT Story</label>
    <referenceTo>TT_Story__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>