force-app/main/default/objects/Case/recordTypes/Business_Change.recordType-meta.xml
<RecordType>
    <fullName>Business_Change</fullName>
    <active>true</active>
    <businessProcess>General</businessProcess>
    <description>Change that does not require technical work or support</description>
    <label>Business Change</label>
</RecordType>