force-app/main/default/objects/Case/recordTypes/Technical_Change.recordType-meta.xml
<RecordType>
    <fullName>Technical_Change</fullName>
    <active>true</active>
    <businessProcess>Service Contract Support</businessProcess>
    <description>Change that requires technical work and support</description>
    <label>Technical Change</label>
</RecordType>